# Misc

./: README.md
CmakeCppSimple/: .clang-tidy  CMakeLists.txt  Makefile
CmakeCppTemplate/: .gitignore  CMakeLists.txt  control.py
CmakeCppTemplate/program/: main.cpp
CmakeCppTemplate/testrunner/: foo.cpp
CmakeDockerTemplate/: control.py
DockerfileUbuntu/: Dockerfile
MakeCppTemplate/: makefile
ProjectTemplate/: CMakeLists.txt  Makefile
ProjectTemplate/src/: foo.cpp  main.cpp
ProjectTemplate/test/: foo.cpp
PythonTemplate/: main.py  makefile
